Changes-citizens-page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4004,3 +4004,12 @@ ul.notifications {
   border: 1px solid #e5e5e5; }
 
 /** /Dropzone.js **/
+
+
+/* Personal Classes */
+.Search-bar {
+  width: 100%;}
+
+
+  .Aggregate-btn{
+    left: 10%;}
